Creado mediante Colaboratory

--- a/dimorales_QuanconnectTutotials.ipynb
+++ b/dimorales_QuanconnectTutotials.ipynb
@@ -6,7 +6,7 @@
       "name": "dimorales_QuanconnectTutotials.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNKDJOQZTmvyZuBABhrba5/",
+      "authorship_tag": "ABX9TyOwLUIb+QMGvKsBy4g9Hl2/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8dfac292-4e22-4c3a-e209-83b8ae97d160"
+        "outputId": "8edacd28-b91b-4a43-fd9f-02776b1a5797"
       },
       "source": [
         "my_string1 = 'Welcome to'\n",
@@ -70,7 +70,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QA79axLFFSeg",
-        "outputId": "84e71232-336c-460d-e136-4f3350480f4f"
+        "outputId": "3f1d9d3c-a1da-4ae6-9bef-3fc1d4591167"
       },
       "source": [
         "my_int = 2**100000\n",
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D8-0f7rDFdBh",
-        "outputId": "d4f1c92a-422a-474e-b70a-6cbf94f40572"
+        "outputId": "cbd53969-311f-4b87-8307-284b6f9ddb63"
       },
       "source": [
         "my_string = \"2415f\"\n",
@@ -125,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fS1qe6qnFd1P",
-        "outputId": "54496bff-15bc-48cb-b2c9-c4741eeb967e"
+        "outputId": "308fb546-746c-4465-b123-2954d8822f14"
       },
       "source": [
         "my_string = \"300\"\n",
@@ -150,7 +150,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UbpFUsc5FgqF",
-        "outputId": "4b63245a-b1b4-4d79-fd20-26a3bed944c5"
+        "outputId": "0cf1c110-eae1-40a2-b861-da470eb2ae0f"
       },
       "source": [
         "my_bool = True\n",
@@ -176,7 +176,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dcdJRegAFw5A",
-        "outputId": "88d55ec6-cd93-4813-fd2e-6a4c7c0dd982"
+        "outputId": "bccc15d4-eefb-4aa8-f10e-9775770306f6"
       },
       "source": [
         "print(\"Addition \", 3+5)\n",
@@ -207,7 +207,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MzGKniVAF1fB",
-        "outputId": "070b272d-d5ab-4c32-ea07-3400a3158e32"
+        "outputId": "847fc337-d614-4bb5-8119-788f3b27d8b0"
       },
       "source": [
         "print(5/7)\n",
@@ -232,7 +232,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lddcquBzGFKT",
-        "outputId": "f7bfb996-c1b4-4298-f516-929a34458fc5"
+        "outputId": "90d6ad7a-a0e4-4288-b355-67030e884eec"
       },
       "source": [
         "my_list = [1,2,3,'Quant', 'Connect']\n",
@@ -256,7 +256,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CdupOGQIGP3_",
-        "outputId": "b4bad9a8-7213-47f6-b5cd-5597e420eb16"
+        "outputId": "2289ce21-fb9f-43b3-9953-9b9425892e78"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -273,6 +273,55 @@
             "7\n",
             "1\n",
             "Connect\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XLPKGyKXGh8E",
+        "outputId": "21a525ed-ae1a-4ca7-9a0e-675ea8c3d39b"
+      },
+      "source": [
+        "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
+        "my_list[3] = 'start'\n",
+        "print(my_list)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 'start', 5, 'Quant', 'Connect']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FFCiV-OTGuMg",
+        "outputId": "649092ac-8b08-4471-9267-75cef7b05f34"
+      },
+      "source": [
+        "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
+        "print(my_list[1:5])"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 3, 4, 5]\n"
           ]
         }
       ]
