Creado mediante Colaboratory

--- a/dimorales_QuanconnectTutotials.ipynb
+++ b/dimorales_QuanconnectTutotials.ipynb
@@ -6,7 +6,7 @@
       "name": "dimorales_QuanconnectTutotials.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOwLUIb+QMGvKsBy4g9Hl2/",
+      "authorship_tag": "ABX9TyMnUAAxSDk3/wNRrF1Ev6hY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8edacd28-b91b-4a43-fd9f-02776b1a5797"
+        "outputId": "22f9c4e0-4eae-4beb-f4e2-ddb8ddac51be"
       },
       "source": [
         "my_string1 = 'Welcome to'\n",
@@ -70,7 +70,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QA79axLFFSeg",
-        "outputId": "3f1d9d3c-a1da-4ae6-9bef-3fc1d4591167"
+        "outputId": "42e594f5-c098-4056-bba8-dcba7ae9462e"
       },
       "source": [
         "my_int = 2**100000\n",
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D8-0f7rDFdBh",
-        "outputId": "cbd53969-311f-4b87-8307-284b6f9ddb63"
+        "outputId": "53a58a61-a6e5-40d7-f511-7d655c6140dd"
       },
       "source": [
         "my_string = \"2415f\"\n",
@@ -125,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fS1qe6qnFd1P",
-        "outputId": "308fb546-746c-4465-b123-2954d8822f14"
+        "outputId": "458a8c6a-b00c-495a-d643-d22d6f957f7c"
       },
       "source": [
         "my_string = \"300\"\n",
@@ -150,7 +150,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UbpFUsc5FgqF",
-        "outputId": "0cf1c110-eae1-40a2-b861-da470eb2ae0f"
+        "outputId": "a2457c3b-b03d-49ef-9db9-4339efc2110b"
       },
       "source": [
         "my_bool = True\n",
@@ -176,7 +176,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dcdJRegAFw5A",
-        "outputId": "bccc15d4-eefb-4aa8-f10e-9775770306f6"
+        "outputId": "4e5373ed-9627-440e-f9d7-d2ce1e761a9a"
       },
       "source": [
         "print(\"Addition \", 3+5)\n",
@@ -207,7 +207,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MzGKniVAF1fB",
-        "outputId": "847fc337-d614-4bb5-8119-788f3b27d8b0"
+        "outputId": "39e3bbc2-fcfa-4c8b-b532-9eb136f9549c"
       },
       "source": [
         "print(5/7)\n",
@@ -232,7 +232,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lddcquBzGFKT",
-        "outputId": "90d6ad7a-a0e4-4288-b355-67030e884eec"
+        "outputId": "1a75de25-5fde-4088-e550-b16811457d85"
       },
       "source": [
         "my_list = [1,2,3,'Quant', 'Connect']\n",
@@ -256,7 +256,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CdupOGQIGP3_",
-        "outputId": "2289ce21-fb9f-43b3-9953-9b9425892e78"
+        "outputId": "804dc473-e8cd-4c38-9680-4c67ebe2df1e"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -284,7 +284,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XLPKGyKXGh8E",
-        "outputId": "21a525ed-ae1a-4ca7-9a0e-675ea8c3d39b"
+        "outputId": "f5eb94b6-8757-4a05-f4d9-b8500c208b49"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -309,7 +309,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FFCiV-OTGuMg",
-        "outputId": "649092ac-8b08-4471-9267-75cef7b05f34"
+        "outputId": "67aee4b5-c073-4ce6-8060-98a3aa3e2754"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -325,6 +325,147 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0XSbTgSAHUmF",
+        "outputId": "6f1d4201-81d5-4323-f69a-587fff8038dd"
+      },
+      "source": [
+        "print(my_list[4:])"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[5, 'Quant', 'Connect']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6bgD5xPCHZMQ",
+        "outputId": "7d33b8c4-75c0-41ca-a74b-3c4b2f8524ec"
+      },
+      "source": [
+        "print(my_list[:5])"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OuCUqEepHfJg",
+        "outputId": "c82cbf3c-944a-4186-d067-f5e55cc9442c"
+      },
+      "source": [
+        "my_list = ['Hello', 'world', 'Hello']\n",
+        "my_list.append('world')\n",
+        "print(my_list)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Hello', 'world', 'Hello', 'world']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bixBZQjGHmVg",
+        "outputId": "1f491a21-7e0f-4ad7-9235-be166f256b45"
+      },
+      "source": [
+        "my_list.remove('world')\n",
+        "print(my_list)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Hello', 'Hello', 'world']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qLqSwLufH7t_"
+      },
+      "source": [
+        "my_tuple = ('Welcome','to','hello world')"
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xUhZC_G2H8xg",
+        "outputId": "13b953ed-8903-453f-b1f2-dc1bef4211a7"
+      },
+      "source": [
+        "my_tuple = ('Welcome','to','hello world')\n",
+        "print(my_tuple[2:])"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('hello world',)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Xtps4UnVISVj"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 17,
+      "outputs": []
     }
   ]
 }
