Creado mediante Colaboratory

--- a/dimorales_QuanconnectTutotials.ipynb
+++ b/dimorales_QuanconnectTutotials.ipynb
@@ -6,7 +6,7 @@
       "name": "dimorales_QuanconnectTutotials.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMnUAAxSDk3/wNRrF1Ev6hY",
+      "authorship_tag": "ABX9TyM0mQg11riaL3twS1CaUCtE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "22f9c4e0-4eae-4beb-f4e2-ddb8ddac51be"
+        "outputId": "db3716e6-1f08-400d-aefc-13cd9b60295a"
       },
       "source": [
         "my_string1 = 'Welcome to'\n",
@@ -70,7 +70,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QA79axLFFSeg",
-        "outputId": "42e594f5-c098-4056-bba8-dcba7ae9462e"
+        "outputId": "2f09ffad-cff5-4bba-efcf-6d12c5dd27ab"
       },
       "source": [
         "my_int = 2**100000\n",
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D8-0f7rDFdBh",
-        "outputId": "53a58a61-a6e5-40d7-f511-7d655c6140dd"
+        "outputId": "6c63b4d4-055d-4e61-c435-8ce7f4aeae8c"
       },
       "source": [
         "my_string = \"2415f\"\n",
@@ -125,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fS1qe6qnFd1P",
-        "outputId": "458a8c6a-b00c-495a-d643-d22d6f957f7c"
+        "outputId": "cb2d02cc-c493-44b2-d7e7-0fb9bbb44029"
       },
       "source": [
         "my_string = \"300\"\n",
@@ -150,7 +150,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UbpFUsc5FgqF",
-        "outputId": "a2457c3b-b03d-49ef-9db9-4339efc2110b"
+        "outputId": "6cb0a3ac-0ea2-4232-c0ab-4fdca8d287a9"
       },
       "source": [
         "my_bool = True\n",
@@ -176,7 +176,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dcdJRegAFw5A",
-        "outputId": "4e5373ed-9627-440e-f9d7-d2ce1e761a9a"
+        "outputId": "730a2ee3-902a-4812-fd4d-5ff49b9dfde3"
       },
       "source": [
         "print(\"Addition \", 3+5)\n",
@@ -207,7 +207,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MzGKniVAF1fB",
-        "outputId": "39e3bbc2-fcfa-4c8b-b532-9eb136f9549c"
+        "outputId": "2145a451-4162-4cb0-cdcb-88cf0a506c1a"
       },
       "source": [
         "print(5/7)\n",
@@ -232,7 +232,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lddcquBzGFKT",
-        "outputId": "1a75de25-5fde-4088-e550-b16811457d85"
+        "outputId": "a5e15249-4483-4ece-890a-40fa2d179094"
       },
       "source": [
         "my_list = [1,2,3,'Quant', 'Connect']\n",
@@ -256,7 +256,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CdupOGQIGP3_",
-        "outputId": "804dc473-e8cd-4c38-9680-4c67ebe2df1e"
+        "outputId": "1d405bb9-6228-4652-b3ae-a40152109f62"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -284,7 +284,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XLPKGyKXGh8E",
-        "outputId": "f5eb94b6-8757-4a05-f4d9-b8500c208b49"
+        "outputId": "140d7a20-1f16-45a1-c99b-abcca0daf7f8"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -309,7 +309,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FFCiV-OTGuMg",
-        "outputId": "67aee4b5-c073-4ce6-8060-98a3aa3e2754"
+        "outputId": "f8e564e8-837b-4987-ec55-960cbb8cbf3f"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -333,7 +333,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0XSbTgSAHUmF",
-        "outputId": "6f1d4201-81d5-4323-f69a-587fff8038dd"
+        "outputId": "778c4f8d-555e-4936-ecb4-8391dd841b1e"
       },
       "source": [
         "print(my_list[4:])"
@@ -356,7 +356,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6bgD5xPCHZMQ",
-        "outputId": "7d33b8c4-75c0-41ca-a74b-3c4b2f8524ec"
+        "outputId": "2788dd07-8d22-42f5-c184-37cb1922a12c"
       },
       "source": [
         "print(my_list[:5])"
@@ -379,7 +379,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OuCUqEepHfJg",
-        "outputId": "c82cbf3c-944a-4186-d067-f5e55cc9442c"
+        "outputId": "fd5375e1-e9cb-4e46-de89-d33d674a8cd0"
       },
       "source": [
         "my_list = ['Hello', 'world', 'Hello']\n",
@@ -404,7 +404,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bixBZQjGHmVg",
-        "outputId": "1f491a21-7e0f-4ad7-9235-be166f256b45"
+        "outputId": "def30fd9-8049-4aa5-aa1e-8c698d51d3c1"
       },
       "source": [
         "my_list.remove('world')\n",
@@ -439,7 +439,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xUhZC_G2H8xg",
-        "outputId": "13b953ed-8903-453f-b1f2-dc1bef4211a7"
+        "outputId": "426dfcc4-e1ef-4a37-9a9c-2c0acfafa934"
       },
       "source": [
         "my_tuple = ('Welcome','to','hello world')\n",
@@ -459,12 +459,142 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Xtps4UnVISVj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xtps4UnVISVj",
+        "outputId": "93578ceb-f868-462d-a383-9d15ddd30783"
+      },
+      "source": [
+        "stock_list = ['AAPL','GOOG','IBM','AAPL','IBM','FB','F','GOOG',\"F\",'INSTA']\n",
+        "stock_set = set(stock_list)\n",
+        "print(stock_set)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'AAPL', 'IBM', 'INSTA', 'GOOG', 'FB', 'F'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gQE2ATqOJVPf"
+      },
+      "source": [
+        "my_dic = {'AAPL':'AAPLE', 'FB':'FaceBook', 'GOOG':'Alphabet','HELLO':'WORLD'}"
+      ],
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1Wj49mZYJbhV",
+        "outputId": "3e4bd712-5cac-4b69-ce1d-4864efa5dfce"
+      },
+      "source": [
+        "print(my_dic['HELLO'])"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "WORLD\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FMHLWwysJ2CX",
+        "outputId": "081aea91-6db9-4d99-9bce-91cff0d6d583"
+      },
+      "source": [
+        "my_dic['HELLO'] = 'Hello World'\n",
+        "print(my_dic['HELLO'])"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "czipGKRNKsUi",
+        "outputId": "807eb5d2-2580-467a-efe2-36f3094a802f"
+      },
+      "source": [
+        "print(my_dic.keys())"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dict_keys(['AAPL', 'FB', 'GOOG', 'HELLO'])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rMg9JE7QK8tH",
+        "outputId": "fda13619-10d1-44c9-fb46-9fb57fa9c85f"
+      },
+      "source": [
+        "my_str = 'Welcome to QuantConnect'\n",
+        "print(my_str[3:15])"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "come to Quan\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BUzEVL_uLOio"
       },
       "source": [
         ""
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     }
   ]
