Creado mediante Colaboratory

--- a/dimorales_QuanconnectTutotials.ipynb
+++ b/dimorales_QuanconnectTutotials.ipynb
@@ -6,7 +6,7 @@
       "name": "dimorales_QuanconnectTutotials.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM0mQg11riaL3twS1CaUCtE",
+      "authorship_tag": "ABX9TyOKbEo/gH+0cWLcMEbfVF8Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "db3716e6-1f08-400d-aefc-13cd9b60295a"
+        "outputId": "206d6bed-20a3-44a4-b37a-d8ac38969aa0"
       },
       "source": [
         "my_string1 = 'Welcome to'\n",
@@ -70,7 +70,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QA79axLFFSeg",
-        "outputId": "2f09ffad-cff5-4bba-efcf-6d12c5dd27ab"
+        "outputId": "96473deb-faf3-46ab-e053-5a76d35e2a24"
       },
       "source": [
         "my_int = 2**100000\n",
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D8-0f7rDFdBh",
-        "outputId": "6c63b4d4-055d-4e61-c435-8ce7f4aeae8c"
+        "outputId": "7b7c1937-eddc-4181-f43f-1ea2d8fa45d4"
       },
       "source": [
         "my_string = \"2415f\"\n",
@@ -125,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fS1qe6qnFd1P",
-        "outputId": "cb2d02cc-c493-44b2-d7e7-0fb9bbb44029"
+        "outputId": "8d783f12-e2d4-47f3-c258-4a844b9d64f8"
       },
       "source": [
         "my_string = \"300\"\n",
@@ -150,7 +150,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UbpFUsc5FgqF",
-        "outputId": "6cb0a3ac-0ea2-4232-c0ab-4fdca8d287a9"
+        "outputId": "abfb7514-9a5b-4bac-88b5-79e03d5b832d"
       },
       "source": [
         "my_bool = True\n",
@@ -176,7 +176,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dcdJRegAFw5A",
-        "outputId": "730a2ee3-902a-4812-fd4d-5ff49b9dfde3"
+        "outputId": "37781547-3dbe-4a3b-95e2-7589efe01e57"
       },
       "source": [
         "print(\"Addition \", 3+5)\n",
@@ -207,7 +207,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MzGKniVAF1fB",
-        "outputId": "2145a451-4162-4cb0-cdcb-88cf0a506c1a"
+        "outputId": "7df8785a-f16b-4c99-eb53-d8a159821ba4"
       },
       "source": [
         "print(5/7)\n",
@@ -232,7 +232,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lddcquBzGFKT",
-        "outputId": "a5e15249-4483-4ece-890a-40fa2d179094"
+        "outputId": "8dd842ad-6892-4120-87f5-cae907d1938a"
       },
       "source": [
         "my_list = [1,2,3,'Quant', 'Connect']\n",
@@ -256,7 +256,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CdupOGQIGP3_",
-        "outputId": "1d405bb9-6228-4652-b3ae-a40152109f62"
+        "outputId": "c413683e-eff5-4751-8513-9bda2953f513"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -284,7 +284,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XLPKGyKXGh8E",
-        "outputId": "140d7a20-1f16-45a1-c99b-abcca0daf7f8"
+        "outputId": "9a1dc13f-c232-4b9a-bd47-010a3d67a10d"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -309,7 +309,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FFCiV-OTGuMg",
-        "outputId": "f8e564e8-837b-4987-ec55-960cbb8cbf3f"
+        "outputId": "7b501269-a13c-4dac-f9fe-b70c085a0182"
       },
       "source": [
         "my_list = [1,2,3,4,5,'Quant', 'Connect']\n",
@@ -333,7 +333,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0XSbTgSAHUmF",
-        "outputId": "778c4f8d-555e-4936-ecb4-8391dd841b1e"
+        "outputId": "e39d1478-8a61-4f12-8bb7-c6c25a8eb298"
       },
       "source": [
         "print(my_list[4:])"
@@ -356,7 +356,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6bgD5xPCHZMQ",
-        "outputId": "2788dd07-8d22-42f5-c184-37cb1922a12c"
+        "outputId": "c353200f-13cd-42b1-b2d5-c0655b31c460"
       },
       "source": [
         "print(my_list[:5])"
@@ -379,7 +379,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OuCUqEepHfJg",
-        "outputId": "fd5375e1-e9cb-4e46-de89-d33d674a8cd0"
+        "outputId": "b55ecd00-d16a-4356-88de-58bd5fdf3c92"
       },
       "source": [
         "my_list = ['Hello', 'world', 'Hello']\n",
@@ -404,7 +404,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bixBZQjGHmVg",
-        "outputId": "def30fd9-8049-4aa5-aa1e-8c698d51d3c1"
+        "outputId": "86e8471c-e18a-4cdd-d167-1b2eb4708c11"
       },
       "source": [
         "my_list.remove('world')\n",
@@ -439,7 +439,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xUhZC_G2H8xg",
-        "outputId": "426dfcc4-e1ef-4a37-9a9c-2c0acfafa934"
+        "outputId": "7f0f4af7-724f-45c0-9ad0-da9aad6df334"
       },
       "source": [
         "my_tuple = ('Welcome','to','hello world')\n",
@@ -463,7 +463,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xtps4UnVISVj",
-        "outputId": "93578ceb-f868-462d-a383-9d15ddd30783"
+        "outputId": "1bbec808-c758-43f1-91f9-c28be83f822a"
       },
       "source": [
         "stock_list = ['AAPL','GOOG','IBM','AAPL','IBM','FB','F','GOOG',\"F\",'INSTA']\n",
@@ -476,7 +476,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'AAPL', 'IBM', 'INSTA', 'GOOG', 'FB', 'F'}\n"
+            "{'AAPL', 'GOOG', 'F', 'IBM', 'FB', 'INSTA'}\n"
           ]
         }
       ]
@@ -499,7 +499,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Wj49mZYJbhV",
-        "outputId": "3e4bd712-5cac-4b69-ce1d-4864efa5dfce"
+        "outputId": "4a6499bc-5573-45d6-aa70-bdc706d3c9f2"
       },
       "source": [
         "print(my_dic['HELLO'])"
@@ -522,7 +522,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FMHLWwysJ2CX",
-        "outputId": "081aea91-6db9-4d99-9bce-91cff0d6d583"
+        "outputId": "98b08f20-566a-41b0-8456-99b8af5323fa"
       },
       "source": [
         "my_dic['HELLO'] = 'Hello World'\n",
@@ -546,7 +546,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "czipGKRNKsUi",
-        "outputId": "807eb5d2-2580-467a-efe2-36f3094a802f"
+        "outputId": "fed50ef2-4c53-404d-a3f1-a2dd87309733"
       },
       "source": [
         "print(my_dic.keys())"
@@ -569,7 +569,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rMg9JE7QK8tH",
-        "outputId": "fda13619-10d1-44c9-fb46-9fb57fa9c85f"
+        "outputId": "2a11730b-299d-4b3d-8b90-626fa5ef6eea"
       },
       "source": [
         "my_str = 'Welcome to QuantConnect'\n",
@@ -589,13 +589,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BUzEVL_uLOio"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BUzEVL_uLOio",
+        "outputId": "7de6b6f5-a4d5-4bf2-9e77-c8992882095a"
       },
       "source": [
-        ""
+        "print('Counting the number of e appears in this sentence'.count('a'))\n",
+        "print('The first time e appears in this sentence'.find('a'))\n",
+        "print('all the a in this sentence now becomes e'.replace('a','i'))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "17\n",
+            "ill the i in this sentence now becomes e\n"
+          ]
+        }
+      ]
     }
   ]
 }
